Jupyter notebook pour le preprocessing des donnes parc auto autobus, camions et camionettes par departement par types

--- a/parc_auto/Transfo_dataset_autobus_cam_camion_type.ipynb
+++ b/parc_auto/Transfo_dataset_autobus_cam_camion_type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,22 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "autobus_ap_2010_transfo=pivot_and_merge(recup_tab_energie(excel_autobus_ap_2010,col_names_ap_2010_temp),col_names_ap_2010_temp)\n",
     "\n",
-    "#autobus_ap_2010_transfo.to_csv(\"autobus_ap_2010.csv\",sep=';', index = False)\n",
+    "autobus_ap_2010_transfo.to_csv(\"autobus_ap_2010_par_type.csv\",sep=';', index = False)\n",
     "\n",
     "autobus_av_2010_transfo=pivot_and_merge(recup_tab_energie(excel_autobus_av_2010,col_names_av_2010_temp),col_names_av_2010_temp)\n",
     "\n",
-    "#autobus_av_2010_transfo.to_csv(\"autobus_av_2010.csv\",sep=';', index = False)"
+    "autobus_av_2010_transfo.to_csv(\"autobus_av_2010_par_type.csv\",sep=';', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,11 +160,11 @@
     "\n",
     "tab_camion_transfo=pivot_and_merge(tab_camion, col_names_cam)\n",
     "\n",
-    "tab_camion_transfo.to_csv(\"camion.csv\",sep=';', index = False)\n",
+    "tab_camion_transfo.to_csv(\"camion_par_type.csv\",sep=';', index = False)\n",
     "\n",
     "tab_camionnette_transfo=pivot_and_merge(tab_camionnette, col_names_cam)\n",
     "\n",
-    "tab_camionnette_transfo.to_csv(\"camionnette.csv\",sep=';', index = False)\n",
+    "tab_camionnette_transfo.to_csv(\"camionnette_par_type.csv\",sep=';', index = False)\n",
     "\n"
    ]
   }
