--- a/parc_auto/Transfo_dataset_voitures_dep.ipynb
+++ b/parc_auto/Transfo_dataset_voitures_dep.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,202 @@
     "    #Renommage des colonnes parce que j'ai fait n'importe auoi au debut\n",
     "    concat_excel_voit_part_transfo = concat_excel_voit_part_transfo.rename(columns={\"Regions\":\"Régions\",\"Departements\" : \"Départements\" ,\"Electricite-Essence\":\"Electricité-Essence\",\"Electricite\":\"Electricité\",\"Autres+Non_detecte\":\"Autres et non détectés\"})\n",
     "    #Ecriture du fichier\n",
-    "    concat_excel_voit_part_transfo.to_csv(\"voiture_par_dep.csv\",sep=';', index = False)"
+    "    concat_excel_voit_part_transfo.to_csv(\"voiture_par_dep.csv\",sep=';', index = False)\n",
+    "    \n",
+    "    #Version 2 :\n",
+    "    concat_excel_voit_part_transfo_v2=pd.melt(concat_excel_voit_part_transfo , id_vars=['Année', 'Régions', 'Départements'], value_vars=['Essence+Superéthanol','Electricité-Essence', 'Gazole', 'Essence-GPL','Electricité','Gazole-électricité', 'Autres et non détectés'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
+    "    #Ecriture du fichier\n",
+    "    concat_excel_voit_part_transfo_v2.to_csv(\"voiture_par_dep_v2.csv\",sep=';', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Année</th>\n",
+       "      <th>Régions</th>\n",
+       "      <th>Départements</th>\n",
+       "      <th>Fuel</th>\n",
+       "      <th>Nb_véhicules</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Ain</td>\n",
+       "      <td>Essence+Superéthanol</td>\n",
+       "      <td>121946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Allier</td>\n",
+       "      <td>Essence+Superéthanol</td>\n",
+       "      <td>63665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Haute-Loire</td>\n",
+       "      <td>Essence+Superéthanol</td>\n",
+       "      <td>35047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Savoie</td>\n",
+       "      <td>Essence+Superéthanol</td>\n",
+       "      <td>83682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Rhône</td>\n",
+       "      <td>Essence+Superéthanol</td>\n",
+       "      <td>349385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6043</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Seine-Saint-Denis</td>\n",
+       "      <td>Autres et non détectés</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6044</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Autres et non détectés</td>\n",
+       "      <td>138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6045</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Hauts-de-Seine</td>\n",
+       "      <td>Autres et non détectés</td>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6046</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Val-de-Marne</td>\n",
+       "      <td>Autres et non détectés</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6047</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Yvelines</td>\n",
+       "      <td>Autres et non détectés</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6048 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Année               Régions       Départements                    Fuel  \\\n",
+       "0     2011  Auvergne-Rhône-Alpes                Ain    Essence+Superéthanol   \n",
+       "1     2011  Auvergne-Rhône-Alpes             Allier    Essence+Superéthanol   \n",
+       "2     2011  Auvergne-Rhône-Alpes        Haute-Loire    Essence+Superéthanol   \n",
+       "3     2011  Auvergne-Rhône-Alpes             Savoie    Essence+Superéthanol   \n",
+       "4     2011  Auvergne-Rhône-Alpes              Rhône    Essence+Superéthanol   \n",
+       "...    ...                   ...                ...                     ...   \n",
+       "6043  2019         Île-de-France  Seine-Saint-Denis  Autres et non détectés   \n",
+       "6044  2019         Île-de-France              Paris  Autres et non détectés   \n",
+       "6045  2019         Île-de-France     Hauts-de-Seine  Autres et non détectés   \n",
+       "6046  2019         Île-de-France       Val-de-Marne  Autres et non détectés   \n",
+       "6047  2019         Île-de-France           Yvelines  Autres et non détectés   \n",
+       "\n",
+       "     Nb_véhicules  \n",
+       "0          121946  \n",
+       "1           63665  \n",
+       "2           35047  \n",
+       "3           83682  \n",
+       "4          349385  \n",
+       "...           ...  \n",
+       "6043          100  \n",
+       "6044          138  \n",
+       "6045          161  \n",
+       "6046           75  \n",
+       "6047          118  \n",
+       "\n",
+       "[6048 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#concat_excel_voit_part_transfo\n",
+    "pd.melt(concat_excel_voit_part_transfo , id_vars=['Année', 'Régions', 'Départements'], value_vars=['Essence+Superéthanol','Electricité-Essence', 'Gazole', 'Essence-GPL','Electricité','Gazole-électricité', 'Autres et non détectés'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Année', 'Régions', 'Départements', 'Essence+Superéthanol',\n",
+       "       'Electricité-Essence', 'Gazole', 'Essence-GPL', 'Electricité',\n",
+       "       'Gazole-électricité', 'Autres et non détectés', 'Total'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concat_excel_voit_part_transfo.columns"
    ]
   },
   {
