--- a/parc_auto/Transfo_dataset_camion_camionnettes_dep.ipynb
+++ b/parc_auto/Transfo_dataset_camion_camionnettes_dep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +278,200 @@
     "    #Concatenation des années\n",
     "    concat_excel_cam_transfo=pd.concat(excel_cam_transfo)\n",
     "    #Ecriture du fichier\n",
-    "    concat_excel_cam_transfo.to_csv(\"camion_camionnette_par_dep.csv\",sep=';', index = False)\n",
-    "    "
+    "    #concat_excel_cam_transfo.to_csv(\"camion_camionnette_par_dep.csv\",sep=';', index = False)\n",
+    "    \n",
+    "    #Version 2 :\n",
+    "    concat_excel_cam_transfo_v2=pd.melt(concat_excel_cam_transfo , id_vars=['Année', 'Régions', 'Départements'], value_vars=['Gazole', 'Essence', 'Essence-GPL','Electricité', 'Autres et non  déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
+    "    #Ecriture du fichier\n",
+    "    concat_excel_cam_transfo.to_csv(\"camion_camionnette_par_dep.csv\",sep=';', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Année', 'Régions', 'Départements', 'Gazole', 'Essence', 'Essence-GPL',\n",
+       "       'Electricité', 'Autres et non  déterminées', 'Total'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concat_excel_cam_transfo.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Année</th>\n",
+       "      <th>Régions</th>\n",
+       "      <th>Départements</th>\n",
+       "      <th>Fuel</th>\n",
+       "      <th>Nb_véhicules</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Ain</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>60174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Allier</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>36648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Haute-Loire</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>27115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Savoie</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>51414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Auvergne-Rhône-Alpes</td>\n",
+       "      <td>Rhône</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>190493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4795</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Seine-Saint-Denis</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4796</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4797</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Hauts-de-Seine</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4798</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Val-de-Marne</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4799</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Île-de-France</td>\n",
+       "      <td>Yvelines</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>213</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4800 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Année               Régions       Départements  \\\n",
+       "0     2010  Auvergne-Rhône-Alpes                Ain   \n",
+       "1     2010  Auvergne-Rhône-Alpes             Allier   \n",
+       "2     2010  Auvergne-Rhône-Alpes        Haute-Loire   \n",
+       "3     2010  Auvergne-Rhône-Alpes             Savoie   \n",
+       "4     2010  Auvergne-Rhône-Alpes              Rhône   \n",
+       "...    ...                   ...                ...   \n",
+       "4795  2019         Île-de-France  Seine-Saint-Denis   \n",
+       "4796  2019         Île-de-France              Paris   \n",
+       "4797  2019         Île-de-France     Hauts-de-Seine   \n",
+       "4798  2019         Île-de-France       Val-de-Marne   \n",
+       "4799  2019         Île-de-France           Yvelines   \n",
+       "\n",
+       "                            Fuel Nb_véhicules  \n",
+       "0                         Gazole        60174  \n",
+       "1                         Gazole        36648  \n",
+       "2                         Gazole        27115  \n",
+       "3                         Gazole        51414  \n",
+       "4                         Gazole       190493  \n",
+       "...                          ...          ...  \n",
+       "4795  Autres et non  déterminées          449  \n",
+       "4796  Autres et non  déterminées          470  \n",
+       "4797  Autres et non  déterminées          503  \n",
+       "4798  Autres et non  déterminées          303  \n",
+       "4799  Autres et non  déterminées          213  \n",
+       "\n",
+       "[4800 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.melt(concat_excel_cam_transfo , id_vars=['Année', 'Régions', 'Départements'], value_vars=['Gazole', 'Essence', 'Essence-GPL','Electricité', 'Autres et non  déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")"
    ]
   },
   {
