--- a/parc_auto/Transfo_dataset_autobus_cam_camion_type.ipynb
+++ b/parc_auto/Transfo_dataset_autobus_cam_camion_type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +133,24 @@
     "\n",
     "autobus_ap_2010_transfo.to_csv(\"autobus_ap_2010_par_type.csv\",sep=';', index = False)\n",
     "\n",
+    "autobus_ap_2010_transfo_v2= pd.melt(autobus_ap_2010_transfo , id_vars=['Classes de places assises', 'Année'], value_vars=['Gazole', 'Gaz naturel','Gazole-électricité', 'Autres hydrocarbures gazeux comprimés', 'Electricité', 'Autres énergies'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
+    "\n",
+    "autobus_ap_2010_transfo_v2.to_csv(\"autobus_ap_2010_par_type_v2.csv\",sep=';', index = False)\n",
+    "\n",
+    "\n",
+    "\n",
     "autobus_av_2010_transfo=pivot_and_merge(recup_tab_energie(excel_autobus_av_2010,col_names_av_2010_temp),col_names_av_2010_temp)\n",
     "\n",
-    "autobus_av_2010_transfo.to_csv(\"autobus_av_2010_par_type.csv\",sep=';', index = False)"
+    "autobus_av_2010_transfo.to_csv(\"autobus_av_2010_par_type.csv\",sep=';', index = False)\n",
+    "\n",
+    "autobus_av_2010_transfo_v2= pd.melt(autobus_av_2010_transfo , id_vars=['Classes de places assises', 'Année'], value_vars=['Essence (ordinaire et super)','Gazole', 'Gaz naturel véhicule (GNV)', 'Autres  et  non déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
+    "\n",
+    "autobus_av_2010_transfo_v2.to_csv(\"autobus_av_2010_par_type_v2.csv\",sep=';', index = False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,13 +170,213 @@
     "\n",
     "tab_camion_transfo=pivot_and_merge(tab_camion, col_names_cam)\n",
     "\n",
-    "tab_camion_transfo.to_csv(\"camion_par_type.csv\",sep=';', index = False)\n",
+    "#tab_camion_transfo.to_csv(\"camion_par_type.csv\",sep=';', index = False)\n",
+    "\n",
+    "tab_camion_transfo_v2 = pd.melt(tab_camion_transfo , id_vars=['Classes de PTAC', 'Année'], value_vars=['Gazole', 'Essence', 'Electricité', 'Essence-GPL', 'Autres et non  déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
+    "\n",
+    "tab_camion_transfo_v2.to_csv(\"camion_par_type_v2.csv\",sep=';', index = False)\n",
+    "\n",
     "\n",
     "tab_camionnette_transfo=pivot_and_merge(tab_camionnette, col_names_cam)\n",
     "\n",
-    "tab_camionnette_transfo.to_csv(\"camionnette_par_type.csv\",sep=';', index = False)\n",
-    "\n"
+    "#tab_camionnette_transfo.to_csv(\"camionnette_par_type.csv\",sep=';', index = False)\n",
+    "\n",
+    "tab_camionnette_transfo_v2=pd.melt(tab_camionnette_transfo , id_vars=['Classes de PTAC', 'Année'], value_vars=['Gazole', 'Essence', 'Electricité', 'Essence-GPL', 'Autres et non  déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
+    "\n",
+    "tab_camionnette_transfo_v2.to_csv(\"camionnette_par_type_v2.csv\",sep=';', index = False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Classes de PTAC', 'Année', 'Gazole', 'Essence', 'Electricité',\n",
+       "       'Essence-GPL', 'Autres et non  déterminées'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab_camionnette_transfo.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Classes de PTAC', 'Année', 'Gazole', 'Essence', 'Electricité',\n",
+       "       'Essence-GPL', 'Autres et non  déterminées'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab_camion_transfo.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Classes de PTAC</th>\n",
+       "      <th>Année</th>\n",
+       "      <th>Fuel</th>\n",
+       "      <th>Nb_véhicules</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Moins de 1,5 tonnes</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>765442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1,5 à 2,5 tonnes</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>2959183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2,6 à 3,5 tonnes</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>2084076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Non déterminée</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Moins de 1,5 tonnes</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>663230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>Non déterminée</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>Moins de 1,5 tonnes</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>1953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>1,5 à 2,5 tonnes</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>6073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>2,6 à 3,5 tonnes</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>3038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>Non déterminée</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Autres et non  déterminées</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Classes de PTAC Année                        Fuel  Nb_véhicules\n",
+       "0      Moins de 1,5 tonnes  2010                      Gazole        765442\n",
+       "1         1,5 à 2,5 tonnes  2010                      Gazole       2959183\n",
+       "2         2,6 à 3,5 tonnes  2010                      Gazole       2084076\n",
+       "3           Non déterminée  2010                      Gazole           509\n",
+       "4      Moins de 1,5 tonnes  2011                      Gazole        663230\n",
+       "..                     ...   ...                         ...           ...\n",
+       "195         Non déterminée  2018  Autres et non  déterminées            42\n",
+       "196    Moins de 1,5 tonnes  2019  Autres et non  déterminées          1953\n",
+       "197       1,5 à 2,5 tonnes  2019  Autres et non  déterminées          6073\n",
+       "198       2,6 à 3,5 tonnes  2019  Autres et non  déterminées          3038\n",
+       "199         Non déterminée  2019  Autres et non  déterminées            50\n",
+       "\n",
+       "[200 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.melt(tab_camionnette_transfo , id_vars=['Classes de PTAC', 'Année'], value_vars=['Gazole', 'Essence', 'Electricité', 'Essence-GPL', 'Autres et non  déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
