--- a/parc_auto/Transfo_dataset_camion_camionnettes_dep.ipynb
+++ b/parc_auto/Transfo_dataset_camion_camionnettes_dep.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -278,12 +278,12 @@
     "    #Concatenation des années\n",
     "    concat_excel_cam_transfo=pd.concat(excel_cam_transfo)\n",
     "    #Ecriture du fichier\n",
-    "    #concat_excel_cam_transfo.to_csv(\"camion_camionnette_par_dep.csv\",sep=';', index = False)\n",
+    "    concat_excel_cam_transfo.to_csv(\"camion_camionnette_par_dep.csv\",sep=';', index = False)\n",
     "    \n",
     "    #Version 2 :\n",
     "    concat_excel_cam_transfo_v2=pd.melt(concat_excel_cam_transfo , id_vars=['Année', 'Régions', 'Départements'], value_vars=['Gazole', 'Essence', 'Essence-GPL','Electricité', 'Autres et non  déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
     "    #Ecriture du fichier\n",
-    "    concat_excel_cam_transfo.to_csv(\"camion_camionnette_par_dep.csv\",sep=';', index = False)"
+    "    concat_excel_cam_transfo_v2.to_csv(\"camion_camionnette_par_dep_v2.csv\",sep=';', index = False)"
    ]
   },
   {
