--- a/parc_auto/Transfo_dataset_autobus_cam_camion_type.ipynb
+++ b/parc_auto/Transfo_dataset_autobus_cam_camion_type.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
     "\n",
     "tab_camion_transfo=pivot_and_merge(tab_camion, col_names_cam)\n",
     "\n",
-    "#tab_camion_transfo.to_csv(\"camion_par_type.csv\",sep=';', index = False)\n",
+    "tab_camion_transfo.to_csv(\"camion_par_type.csv\",sep=';', index = False)\n",
     "\n",
     "tab_camion_transfo_v2 = pd.melt(tab_camion_transfo , id_vars=['Classes de PTAC', 'Année'], value_vars=['Gazole', 'Essence', 'Electricité', 'Essence-GPL', 'Autres et non  déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
     "\n",
@@ -179,7 +179,7 @@
     "\n",
     "tab_camionnette_transfo=pivot_and_merge(tab_camionnette, col_names_cam)\n",
     "\n",
-    "#tab_camionnette_transfo.to_csv(\"camionnette_par_type.csv\",sep=';', index = False)\n",
+    "tab_camionnette_transfo.to_csv(\"camionnette_par_type.csv\",sep=';', index = False)\n",
     "\n",
     "tab_camionnette_transfo_v2=pd.melt(tab_camionnette_transfo , id_vars=['Classes de PTAC', 'Année'], value_vars=['Gazole', 'Essence', 'Electricité', 'Essence-GPL', 'Autres et non  déterminées'], value_name=\"Nb_véhicules\", var_name=\"Fuel\")\n",
     "\n",
